--- a/index.html
+++ b/index.html
@@ -93,14 +93,12 @@
 
     <!-- Passwortschutz Form -->
     <!-- Temporär auskommentiert für die Entwicklung -->
-    <!--
     <div id="login">
         <h2>Passwort eingeben</h2>
         <input type="password" id="password" placeholder="Passwort" aria-label="Passwort eingeben">
         <button onclick="checkPassword()" id="loginButton">Login</button>
         <div id="errorMessage" class="error-message"></div>
     </div>
-    -->
 
     <!-- Der gesamte Inhalt der Website wird jetzt direkt angezeigt -->
     <div id="content">
@@ -122,7 +120,7 @@
                 <div class="details">
                     <h2>Ort & Uhrzeit</h2>
                     <p><b>Freie Trauung:</b> 15:00 Uhr </p>
-                    <p><a href="https://www.google.com/maps?q=Löwenstraße+103+A,70597+Degerloch" target="_blank">Löwenstraße 103 A, 70597 Degerloch</a></p>
+                    <p><a href="https://www.google.com/maps?q=Löwenstraße+99,70597+Degerloch" target="_blank">Löwenstraße 99, 70597 Degerloch</a></p>
 
                     <p><b>Feier:</b> Ab 17 Uhr </p>
                     <p><a href="https://www.google.com/maps?q=Württembergischer+Automobilclub,+Mörikestraße+30,+70178+Stuttgart" target="_blank">Württembergischer Automobilclub, Mörikestraße 30, 70178 Stuttgart</a></p>
@@ -145,7 +143,7 @@
                 </div>
 
                 <div class="info">
-                    <h2>Unterkunft:</h2>
+                    <h2>Unterkunft</h2>
                     <p>Solltet ihr eine Unterkunft benötigen, bieten sich folgende Hotels an:</p>
                     <p><a href="https://www.google.com/maps?q=Hotel+Park+Inn+by+Radisson+Stuttgart" target="_blank">Hotel Park Inn by Radisson Stuttgart</a></p>
                     <p><a href="https://www.google.com/maps?q=Ibis+Hotel+Centrum+Stuttgart" target="_blank">Ibis Hotel Centrum Stuttgart</a></p>
@@ -171,8 +169,8 @@
                 <p><b>Kathrina Wagner</b> (<a href="https://wa.me/4917682474532?text=Hallo%20Kathrina,%20ich%20habe%20eine%20Frage.." style="color: #f3547c;" target="_blank">WhatsApp</a>)</p>
                 <p><b>Christoph Meier</b> (<a href="https://wa.me/4915142898955?text=Hallo%20Christoph,%20ich%20habe%20eine%20Frage.." style="color: #f3547c;" target="_blank">WhatsApp</a>)</p>
 
-                <a href="https://www.google.com/calendar/render?action=TEMPLATE&text=Ninas+und+Stephans+Hochzeit&dates=20250712/20250713&details=Feiere+mit+uns!&location=Löwenstraße+103+A,+70597+Degerloch" target="_blank">In Google-Kalender speichern</a>
-                <a href="URL-zur-Datei/NinasUndStephansHochzeit.ics" download="NinasUndStephansHochzeit.ics">In Kalender speichern (.ics)</a>
+                <p><a href="https://www.google.com/calendar/render?action=TEMPLATE&text=Ninas+und+Stephans+Hochzeit&dates=20250712/20250713&details=Feiere+mit+uns!&location=Löwenstraße+103+A,+70597+Degerloch" target="_blank">In Google-Kalender speichern</a></p>
+                <p><a href="URL-zur-Datei/NinasUndStephansHochzeit.ics" download="NinasUndStephansHochzeit.ics">In Kalender speichern (.ics)</a></p>
 
 
 
