Update5 index.html
Ohne PW-Schutz

--- a/index.html
+++ b/index.html
@@ -96,13 +96,15 @@
 <body>
 
     <!-- Passwortschutz Form -->
+    <!-- Temporär auskommentiert für die Entwicklung -->
+    <!--
     <div id="login">
         <h2>Passwort eingeben</h2>
         <input type="password" id="password" placeholder="Passwort" aria-label="Passwort eingeben">
         <button onclick="checkPassword()" id="loginButton">Login</button>
         <div id="errorMessage" class="error-message"></div>
     </div>
-
+    
 
     <!-- Der gesamte Inhalt der Website wird jetzt direkt angezeigt -->
     <div id="content">
