--- a/index.html
+++ b/index.html
@@ -124,10 +124,28 @@
 
             <!-- Slideshow mit eigenen Bildern -->
             <div class="slideshow-container">
-                <img src="images/IMG_2967.jpg" class="active" alt="Hochzeitsbild 1">
-                <!-- Du kannst hier weitere Bilder einfügen, z. B.: -->
-                <!-- <img src="images/bild2.jpg" alt="Hochzeitsbild 2"> -->
-                <!-- <img src="images/bild3.jpg" alt="Hochzeitsbild 3"> -->
+                <div class="slideshow-container">
+                    <img src="images/liebe1.jpg" class="active" alt="Bild 1">
+                    <img src="images/liebe2.jpg" alt="Bild 2">
+                    <img src="images/liebe3.jpg" alt="Bild 3">
+                    <img src="images/liebe4.jpg" alt="Bild 4">
+                    <img src="images/liebe5.jpg" alt="Bild 5">
+                    <img src="images/liebe6.jpg" alt="Bild 6">
+                    <img src="images/liebe7.jpg" alt="Bild 7">
+                    <img src="images/liebe8.jpg" alt="Bild 8">
+                    <img src="images/liebe9.jpg" alt="Bild 9">
+                    <img src="images/liebe10.jpg" alt="Bild 10">
+                    <img src="images/liebe11.jpg" alt="Bild 11">
+                    <img src="images/liebe12.jpg" alt="Bild 12">
+                    <img src="images/liebe13.jpg" alt="Bild 13">
+                    <img src="images/liebe14.jpg" alt="Bild 14">
+                    <img src="images/liebe15.jpg" alt="Bild 15">
+                    <img src="images/liebe16.jpg" alt="Bild 16">
+                    <img src="images/liebe17.jpg" alt="Bild 17">
+                    <img src="images/liebe18.jpg" alt="Bild 18">
+                    <img src="images/liebe19.jpg" alt="Bild 19">
+                    <img src="images/liebe20.jpg" alt="Bild 20">
+                </div>
             </div>
 
             <!-- Ort & Uhrzeit mit Rückmeldung Block -->
