--- a/index.html
+++ b/index.html
@@ -65,6 +65,32 @@
             display: block;
         }
 
+        .slideshow-container button {
+            position: absolute;
+            top: 50%;
+            transform: translateY(-50%);
+            background-color: rgba(0,0,0,0.4);
+            color: white;
+            border: none;
+            padding: 10px;
+            font-size: 24px;
+            cursor: pointer;
+            border-radius: 50%;
+            z-index: 2;
+        }
+
+        .slideshow-container .prev {
+            left: 10px;
+        }
+
+        .slideshow-container .next {
+            right: 10px;
+        }
+
+        .slideshow-container button:hover {
+            background-color: rgba(0,0,0,0.7);
+        }
+
         .btn {
             display: inline-block;
             margin-top: 20px;
@@ -124,28 +150,29 @@
 
             <!-- Slideshow mit eigenen Bildern -->
             <div class="slideshow-container">
-                <div class="slideshow-container">
-                    <img src="images/liebe1.jpg" class="active" alt="Bild 1">
-                    <img src="images/liebe2.jpg" alt="Bild 2">
-                    <img src="images/liebe3.jpg" alt="Bild 3">
-                    <img src="images/liebe4.jpg" alt="Bild 4">
-                    <img src="images/liebe5.jpg" alt="Bild 5">
-                    <img src="images/liebe6.jpg" alt="Bild 6">
-                    <img src="images/liebe7.jpg" alt="Bild 7">
-                    <img src="images/liebe8.jpg" alt="Bild 8">
-                    <img src="images/liebe9.jpg" alt="Bild 9">
-                    <img src="images/liebe10.jpg" alt="Bild 10">
-                    <img src="images/liebe11.jpg" alt="Bild 11">
-                    <img src="images/liebe12.jpg" alt="Bild 12">
-                    <img src="images/liebe13.jpg" alt="Bild 13">
-                    <img src="images/liebe14.jpg" alt="Bild 14">
-                    <img src="images/liebe15.jpg" alt="Bild 15">
-                    <img src="images/liebe16.jpg" alt="Bild 16">
-                    <img src="images/liebe17.jpg" alt="Bild 17">
-                    <img src="images/liebe18.jpg" alt="Bild 18">
-                    <img src="images/liebe19.jpg" alt="Bild 19">
-                    <img src="images/liebe20.jpg" alt="Bild 20">
-                </div>
+                <button class="prev">&#10094;</button>
+                <button class="next">&#10095;</button>
+
+                <img src="images/liebe1.jpg" class="active" alt="Hochzeitsbild 1">
+                <img src="images/liebe2.jpg" alt="Hochzeitsbild 2">
+                <img src="images/liebe3.jpg" alt="Hochzeitsbild 3">
+                <img src="images/liebe4.jpg" alt="Hochzeitsbild 4">
+                <img src="images/liebe5.jpg" alt="Hochzeitsbild 5">
+                <img src="images/liebe6.jpg" alt="Hochzeitsbild 6">
+                <img src="images/liebe7.jpg" alt="Hochzeitsbild 7">
+                <img src="images/liebe8.jpg" alt="Hochzeitsbild 8">
+                <img src="images/liebe9.jpg" alt="Hochzeitsbild 9">
+                <img src="images/liebe10.jpg" alt="Hochzeitsbild 10">
+                <img src="images/liebe11.jpg" alt="Hochzeitsbild 11">
+                <img src="images/liebe12.jpg" alt="Hochzeitsbild 12">
+                <img src="images/liebe13.jpg" alt="Hochzeitsbild 13">
+                <img src="images/liebe14.jpg" alt="Hochzeitsbild 14">
+                <img src="images/liebe15.jpg" alt="Hochzeitsbild 15">
+                <img src="images/liebe16.jpg" alt="Hochzeitsbild 16">
+                <img src="images/liebe17.jpg" alt="Hochzeitsbild 17">
+                <img src="images/liebe18.jpg" alt="Hochzeitsbild 18">
+                <img src="images/liebe19.jpg" alt="Hochzeitsbild 19">
+                <img src="images/liebe20.jpg" alt="Hochzeitsbild 20">
             </div>
 
             <!-- Ort & Uhrzeit mit Rückmeldung Block -->
@@ -234,29 +261,6 @@
             const loginButton = document.getElementById('loginButton');
             const errorMessage = document.getElementById('errorMessage');
 
-            // Button deaktivieren während der Überprüfung
-            loginButton.disabled = true;
-
-            if (password === 'siebenundzwanzig') {
-                document.getElementById('login').style.display = 'none';
-                document.getElementById('content').style.display = 'block';
-            } else {
-                errorMessage.textContent = 'Falsches Passwort! Versuche es noch einmal.';
-                // Button nach einer kurzen Verzögerung wieder aktivieren
-                setTimeout(function () {
-                    loginButton.disabled = false;
-                }, 1500);
-            }
-        }
-    </script>
-
-    <script>
-        // Passwortschutz-Funktion
-        function checkPassword() {
-            const password = document.getElementById('password').value;
-            const loginButton = document.getElementById('loginButton');
-            const errorMessage = document.getElementById('errorMessage');
-
             loginButton.disabled = true;
 
             if (password === 'siebenundzwanzig') {
@@ -284,18 +288,18 @@
         }
 
         function nextSlide() {
-            if (slides.length > 1) {
-                currentSlide = (currentSlide + 1) % slides.length;
-                showSlide(currentSlide);
-            }
+            currentSlide = (currentSlide + 1) % slides.length;
+            showSlide(currentSlide);
         }
 
-        setInterval(nextSlide, 3000); // Bildwechsel alle 3 Sekunden
+        function prevSlide() {
+            currentSlide = (currentSlide - 1 + slides.length) % slides.length;
+            showSlide(currentSlide);
+        }
+
+        document.querySelector('.next').addEventListener('click', nextSlide);
+        document.querySelector('.prev').addEventListener('click', prevSlide);
     </script>
-
-
-
-
 </body>
 
 </html>
