commit über WEB

--- a/index.html
+++ b/index.html
@@ -299,6 +299,10 @@
 
         document.querySelector('.next').addEventListener('click', nextSlide);
         document.querySelector('.prev').addEventListener('click', prevSlide);
+
+        // <<< Diese Zeile ergänzen:
+        showSlide(currentSlide);
+        
     </script>
 </body>
 
