--- a/index.html
+++ b/index.html
@@ -153,29 +153,29 @@
                 <button class="prev">&#10094;</button>
                 <button class="next">&#10095;</button>
 
-                <img src="images/LIEBE1.jpg" class="active" alt="Hochzeitsbild 1">
-                <img src="images/LIEBE2.jpg" alt="Hochzeitsbild 2">
-                <img src="images/LIEBE3.jpg" alt="Hochzeitsbild 3">
-                <img src="images/LIEBE4.jpg" alt="Hochzeitsbild 4">
-                <img src="images/LIEBE5.jpg" alt="Hochzeitsbild 5">
-                <img src="images/LIEBE6.jpg" alt="Hochzeitsbild 6">
-                <img src="images/LIEBE7.jpg" alt="Hochzeitsbild 7">
-                <img src="images/LIEBE8.jpg" alt="Hochzeitsbild 8">
-                <img src="images/LIEBE9.jpg" alt="Hochzeitsbild 9">
-                <img src="images/LIEBE10.jpg" alt="Hochzeitsbild 10">
-                <img src="images/LIEBE11.jpg" alt="Hochzeitsbild 11">
-                <img src="images/LIEBE12.jpg" alt="Hochzeitsbild 12">
-                <img src="images/LIEBE13.jpg" alt="Hochzeitsbild 13">
-                <img src="images/LIEBE14.jpg" alt="Hochzeitsbild 14">
-                <img src="images/LIEBE15.jpg" alt="Hochzeitsbild 15">
-                <img src="images/LIEBE16.jpg" alt="Hochzeitsbild 16">
-                <img src="images/LIEBE17.jpg" alt="Hochzeitsbild 17">
-                <img src="images/LIEBE18.jpg" alt="Hochzeitsbild 18">
-                <img src="images/LIEBE19.jpg" alt="Hochzeitsbild 19">
-                <img src="images/LIEBE20.jpg" alt="Hochzeitsbild 20">
-                <img src="images/LIEBE21.jpg" alt="Hochzeitsbild 21">
-                <img src="images/LIEBE22.jpg" alt="Hochzeitsbild 22">
-                <img src="images/LIEBE23.jpg" alt="Hochzeitsbild 23">  
+                <img src="images/liebe1.jpg" class="active" alt="Hochzeitsbild 1">
+                <img src="images/liebe2.jpg" alt="Hochzeitsbild 2">
+                <img src="images/liebe3.jpg" alt="Hochzeitsbild 3">
+                <img src="images/liebe4.jpg" alt="Hochzeitsbild 4">
+                <img src="images/liebe5.jpg" alt="Hochzeitsbild 5">
+                <img src="images/liebe6.jpg" alt="Hochzeitsbild 6">
+                <img src="images/liebe7.jpg" alt="Hochzeitsbild 7">
+                <img src="images/liebe8.jpg" alt="Hochzeitsbild 8">
+                <img src="images/liebe9.jpg" alt="Hochzeitsbild 9">
+                <img src="images/liebe10.jpg" alt="Hochzeitsbild 10">
+                <img src="images/liebe11.jpg" alt="Hochzeitsbild 11">
+                <img src="images/liebe12.jpg" alt="Hochzeitsbild 12">
+                <img src="images/liebe13.jpg" alt="Hochzeitsbild 13">
+                <img src="images/liebe14.jpg" alt="Hochzeitsbild 14">
+                <img src="images/liebe15.jpg" alt="Hochzeitsbild 15">
+                <img src="images/liebe16.jpg" alt="Hochzeitsbild 16">
+                <img src="images/liebe17.jpg" alt="Hochzeitsbild 17">
+                <img src="images/liebe18.jpg" alt="Hochzeitsbild 18">
+                <img src="images/liebe19.jpg" alt="Hochzeitsbild 19">
+                <img src="images/liebe20.jpg" alt="Hochzeitsbild 20">
+                <img src="images/liebe21.jpg" alt="Hochzeitsbild 21">
+                <img src="images/liebe22.jpg" alt="Hochzeitsbild 22">
+                <img src="images/liebe23.jpg" alt="Hochzeitsbild 23">  
             </div>
         
 
