--- a/index.html
+++ b/index.html
@@ -157,25 +157,25 @@
                 <img src="images/liebe2.jpg" alt="Hochzeitsbild 2">
                 <img src="images/liebe3.jpg" alt="Hochzeitsbild 3">
                 <img src="images/liebe4.jpg" alt="Hochzeitsbild 4">
-                <img src="images/liebe5.jpg" alt="Hochzeitsbild 5">
+                <img src="images/liebe5.png" alt="Hochzeitsbild 5">
                 <img src="images/liebe6.jpg" alt="Hochzeitsbild 6">
                 <img src="images/liebe7.jpg" alt="Hochzeitsbild 7">
                 <img src="images/liebe8.jpg" alt="Hochzeitsbild 8">
-                <img src="images/liebe9.jpg" alt="Hochzeitsbild 9">
+                <img src="images/liebe9.png" alt="Hochzeitsbild 9">
                 <img src="images/liebe10.jpg" alt="Hochzeitsbild 10">
                 <img src="images/liebe11.jpg" alt="Hochzeitsbild 11">
                 <img src="images/liebe12.jpg" alt="Hochzeitsbild 12">
                 <img src="images/liebe13.jpg" alt="Hochzeitsbild 13">
                 <img src="images/liebe14.jpg" alt="Hochzeitsbild 14">
                 <img src="images/liebe15.jpg" alt="Hochzeitsbild 15">
-                <img src="images/liebe16.jpg" alt="Hochzeitsbild 16">
+                <img src="images/liebe16.png" alt="Hochzeitsbild 16">
                 <img src="images/liebe17.jpg" alt="Hochzeitsbild 17">
                 <img src="images/liebe18.jpg" alt="Hochzeitsbild 18">
-                <img src="images/liebe19.jpg" alt="Hochzeitsbild 19">
+                <img src="images/liebe19.png" alt="Hochzeitsbild 19">
                 <img src="images/liebe20.jpg" alt="Hochzeitsbild 20">
-                <img src="images/liebe21.jpg" alt="Hochzeitsbild 21">
+                <img src="images/liebe21.png" alt="Hochzeitsbild 21">
                 <img src="images/liebe22.jpg" alt="Hochzeitsbild 22">
-                <img src="images/liebe23.jpg" alt="Hochzeitsbild 23">  
+                <img src="images/liebe23.png" alt="Hochzeitsbild 23">  
             </div>
         
 
