--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
             </div>
 
             <a href="https://docs.google.com/forms/d/e/1FAIpQLSdxVwgSbSHr2UR-JkIgNIfPR4PyoWOpVEog0OXQcaCecqMuOA/viewform?usp=header"
-                class="btn">Zur Zu- & Absage</a>
+                class="btn" target="_blank">Zur Zu- & Absage</a>
         </div>
     </div>
 
