--- a/index.html
+++ b/index.html
@@ -187,18 +187,17 @@
                     <p><a href="https://www.google.com/maps?q=Löwenstraße+99,70597+Degerloch"
                             target="_blank">Löwenstraße 99, 70597 Degerloch</a></p>
 
-                    <p><b>Feier:</b> Ab 17 Uhr </p>
+                    <p><b>Gefolgt von der Feier:</b> </p>
                     <p><a href="https://www.google.com/maps?q=Württembergischer+Automobilclub,+Mörikestraße+30,+70178+Stuttgart"
                             target="_blank">Württembergischer Automobilclub, Mörikestraße 30, 70178 Stuttgart</a></p>
                 </div>
 
                 <div class="info">
                     <h2>Rückmeldung</h2>
-                    <p>Bitte gebt uns bis <b>27. Mai 2025</b> über dieses <a
+                    <p>Wir bitten jeden von euch, bis <b>27. Mai 2025</b> über dieses <a
                             href="https://docs.google.com/forms/d/e/1FAIpQLSdxVwgSbSHr2UR-JkIgNIfPR4PyoWOpVEog0OXQcaCecqMuOA/viewform?usp=header"
-                            target="_blank">Formular</a> Bescheid, ob ihr dabei seid!</p>
-                    <p>Falls nicht, bitte eigenen Stuhl und Vesper mitbringen. 😉</p>
-                </div>
+                            target="_blank">Formular</a> Bescheid zu geben, ob ihr dabei seid!</p>
+                 </div>
             </div>
 
             <!-- Parken mit Unterkunft Block -->
@@ -227,13 +226,13 @@
             <div class="info-wrapper">
                 <div class="info">
                     <h2>Dresscode</h2>
-                    <p>Festlich chic</p>
+                    <p>Festlich chic - Cocktail Attire</p>
                 </div>
 
                 <div class="info">
                     <h2>Geschenkwunsch</h2>
                     <p>Das größte Geschenk ist, dass ihr mit uns feiert! 🎉 Falls ihr uns trotzdem noch eine kleine
-                        Freude machen möchtet, freuen wir uns über einen Beitrag zu unserer gemeinsamen Zukunft.</p>
+                        Freude machen möchtet, freuen wir uns über einen Beitrag zu unserer Hochzeitsreise.</p>
                 </div>
             </div>
 
