--- a/index.html
+++ b/index.html
@@ -196,7 +196,8 @@
                     <h2>Rückmeldung</h2>
                     <p>Wir bitten jeden von euch, bis <b>27. Mai 2025</b> über dieses <a
                             href="https://docs.google.com/forms/d/e/1FAIpQLSdxVwgSbSHr2UR-JkIgNIfPR4PyoWOpVEog0OXQcaCecqMuOA/viewform?usp=header"
-                            target="_blank">Formular</a> Bescheid zu geben, ob ihr dabei seid!</p>
+                            target="_blank">Formular</a> Bescheid zu geben, ob Du dabei bist!</p>
+                    <p>Wir freuen uns sehr auf Dich!</p>
                  </div>
             </div>
 
