--- a/index.html
+++ b/index.html
@@ -194,9 +194,9 @@
 
                 <div class="info">
                     <h2>Rückmeldung</h2>
-                    <p>Wir bitten jeden von euch, bis <b>27. Mai 2025</b> über dieses <a
+                    <p>Bitte gib uns bis zum <b>27. Mai 2025</b> über dieses <a
                             href="https://docs.google.com/forms/d/e/1FAIpQLSdxVwgSbSHr2UR-JkIgNIfPR4PyoWOpVEog0OXQcaCecqMuOA/viewform?usp=header"
-                            target="_blank">Formular</a> Bescheid zu geben, ob Du dabei bist!</p>
+                            target="_blank">Formular</a> Bescheid, ob Du dabei bist!</p>
                     <p>Wir freuen uns sehr auf Dich!</p>
                  </div>
             </div>
